syntax = "proto3";
 
package pkt;

message GetNodeCapacityReq{
   uint64 startTime=1;
   uint32 retryTimes=2;
}

message GetNodeCapacityResp{
    bool writable=1;
    string allocId=2;
}

message ListDNIReq{
    string nextId=1;
    uint32 count=2;
}

message ListDNIResp{
    repeated bytes vhfList=1;
    string nextId=2;
}